simple the code

--- a/robot_autocharge/CMakeLists.txt
+++ b/robot_autocharge/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(robot_autocharge)
-
+#add for debug
+#第一句保证了CXXFLAGS被加上了-g
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+#第二局保证了具体的Make语句被显示出来，我们可以实际检查编译选项是否正常。
+set(CMAKE_VERBOSE_MAKEFILE ON)
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+ add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -118,7 +122,8 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+ include
+ include/${PROJECT_NAME}
   ${Boost_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
 )
