--- a/pf_localization/CMakeLists.txt
+++ b/pf_localization/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   sensor_msgs
   geometry_msgs
+  pf_filtercenter
 )
 
 ## System dependencies are found with CMake's conventions
@@ -108,10 +109,11 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES pf_filtercenter
-#  CATKIN_DEPENDS roscpp std_msgs
-#  DEPENDS system_lib
+  CATKIN_DEPENDS roscpp std_msgs pf_filtercenter
+  #DEPENDS system_lib
+   pf_filtercenter
 )
 
 ###########
