--- a/pf_localization/package.xml
+++ b/pf_localization/package.xml
@@ -53,6 +53,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>pf_filtercenter</build_depend>
   <build_depend>geometry_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
@@ -60,6 +61,8 @@
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>pf_filtercenter</exec_depend>
+
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
 
