在全局定位成功时才进行建图保证了定位准确性;suc

--- a/pf_mapping/CMakeLists.txt
+++ b/pf_mapping/CMakeLists.txt
@@ -133,6 +133,7 @@ include_directories(
  add_library(${PROJECT_NAME}
    src/Geometry.cpp
    src/pf_mapping.cpp
+   src/pf_slam.cpp
  )
 
 ## Add cmake target dependencies of the library
