--- a/pf_localization/package.xml
+++ b/pf_localization/package.xml
@@ -51,6 +51,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>tf</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>pf_filtercenter</build_depend>
@@ -60,6 +61,7 @@
   <build_export_depend>std_msgs</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>tf</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>pf_filtercenter</exec_depend>
 
