实测了建图定位程序;rfs slam err < 10mm. 并修改了程序bug(定位);SUC!

--- a/pf_mapping/CMakeLists.txt
+++ b/pf_mapping/CMakeLists.txt
@@ -132,7 +132,7 @@ include_directories(
 ## Declare a C++ library
  add_library(${PROJECT_NAME}
    src/Geometry.cpp
-   src/pf_mapping.cpp
+   #src/pf_mapping.cpp
    src/pf_slam.cpp
  )
 
