--- a/robotnik_purepursuit_planner-master/robotnik_pp_planner/urdf/R2D2conf_base.yaml
+++ b/robotnik_purepursuit_planner-master/robotnik_pp_planner/urdf/R2D2conf_base.yaml
@@ -16,12 +16,17 @@ wheel_diff_controller:
   # Odometry covariances for the encoder output of the robot. These values should
   # be tuned to your robot's sample odometry data, but these values are a good place
   # to start
-  pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-  twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  #pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  #twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  ###chq modify 20181229 ref mir robot
+  ## x y z r p y
+  # vx vy vz vr vp vy
+  pose_covariance_diagonal : [0.00001, 0.00001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+  twist_covariance_diagonal: [0.1, 0.1, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
   # Top level frame (link) of the robot description
   base_frame_id: base_link
-
+  odom_frame_id: odom      # default: odom
 # Velocity and acceleration limits for the robot
 # chq.we must set bigger than normal because we do not want the outside setting is bigger than this like in dwa setting
 linear:
@@ -29,7 +34,7 @@ linear:
     has_velocity_limits    : true
     max_velocity           : 2.0   # m/s
     has_acceleration_limits: true
-    max_acceleration       : 4.0   # m/s^2
+    max_acceleration       : 2.0   # m/s^2
 angular:
   z:
     has_velocity_limits    : true
