--- a/navigation-indigo-devel/amcl/cfg/AMCL (复件).cfg
+++ b/navigation-indigo-devel/amcl/cfg/AMCL (复件).cfg
@@ -7,13 +7,13 @@ from dynamic_reconfigure.parameter_generator_catkin import ParameterGenerator, i
 
 gen = ParameterGenerator()
 
-gen.add("min_particles", int_t, 0, "Minimum allowed number of particles.", 500, 0, 1000)
-gen.add("max_particles", int_t, 0, "Mamimum allowed number of particles.", 2000, 0, 10000)
+gen.add("min_particles", int_t, 0, "Minimum allowed number of particles.", 100, 0, 1000)
+gen.add("max_particles", int_t, 0, "Mamimum allowed number of particles.", 5000, 0, 10000)
 
-gen.add("kld_err",  double_t, 0, "Maximum error between the true distribution and the estimated distribution.", .05, 0, 1)
+gen.add("kld_err",  double_t, 0, "Maximum error between the true distribution and the estimated distribution.", .01, 0, 1)
 gen.add("kld_z", double_t, 0, "Upper standard normal quantile for (1 - p), where p is the probability that the error on the estimated distrubition will be less than kld_err.", .99, 0, 1)
 
-gen.add("update_min_d", double_t, 0, "Translational movement required before performing a filter update.", .05, 0, 5)
+gen.add("update_min_d", double_t, 0, "Translational movement required before performing a filter update.", .2, 0, 5)
 gen.add("update_min_a", double_t, 0, "Rotational movement required before performing a filter update.", pi/6, 0, 2*pi)
 
 gen.add("resample_interval", int_t, 0, "Number of filter updates required before resampling.", 2, 0, 20)
@@ -38,7 +38,7 @@ gen.add("first_map_only", bool_t, 0, "When set to true, AMCL will only use the f
 gen.add("laser_min_range", double_t, 0, "Minimum scan range to be considered; -1.0 will cause the laser's reported minimum range to be used.", -1, -1, 1000)
 gen.add("laser_max_range", double_t, 0, "Maximum scan range to be considered; -1.0 will cause the laser's reported maximum range to be used.", -1, -1, 1000)
 
-gen.add("laser_max_beams", int_t, 0, "How many evenly-spaced beams in each scan to be used when updating the filter.", 720, 0, 720)
+gen.add("laser_max_beams", int_t, 0, "How many evenly-spaced beams in each scan to be used when updating the filter.", 30, 0, 100)
 
 gen.add("laser_z_hit", double_t, 0, "Mixture weight for the z_hit part of the model.", .95, 0, 10)
 gen.add("laser_z_short", double_t, 0, "Mixture weight for the z_short part of the model.", .1, 0, 10)
@@ -47,7 +47,7 @@ gen.add("laser_z_rand", double_t, 0, "Mixture weight for the z_rand part of the 
 
 gen.add("laser_sigma_hit", double_t, 0, "Standard deviation for Gaussian model used in z_hit part of the model.", .2, 0, 10)
 gen.add("laser_lambda_short", double_t, 0, "Exponential decay parameter for z_short part of model.", .1, 0, 10)
-gen.add("laser_likelihood_max_dist", double_t, 0, "Maximum distance to do obstacle inflation on map, for use in likelihood_field model.", 5, 0, 20)
+gen.add("laser_likelihood_max_dist", double_t, 0, "Maximum distance to do obstacle inflation on map, for use in likelihood_field model.", 2, 0, 20)
 
 lmt = gen.enum([gen.const("beam_const", str_t, "beam", "Use beam laser model"), gen.const("likelihood_field_const", str_t, "likelihood_field", "Use likelihood_field laser model")], "Laser Models")
 gen.add("laser_model_type", str_t, 0, "Which model to use, either beam, likelihood_field or likelihood_field_prob.", "likelihood_field", edit_method=lmt)
@@ -67,7 +67,7 @@ gen.add("odom_alpha4", double_t, 0, "Specifies the expected noise in odometry's 
 gen.add("odom_alpha5", double_t, 0, "Translation-related noise parameter (only used if model is omni).", .2, 0, 10)
 
 gen.add("odom_frame_id", str_t, 0, "Which frame to use for odometry.", "odom")
-gen.add("base_frame_id", str_t, 0, "Which frame to use for the robot base.", "base_footprint")
+gen.add("base_frame_id", str_t, 0, "Which frame to use for the robot base.", "base_link")
 gen.add("global_frame_id", str_t, 0, "The name of the coordinate frame published by the localization system.", "map")
 
 gen.add("restore_defaults", bool_t, 0, "Retsore the default configuration", False)
