修正了GA局部定位程序,在使用前需要调用tailscan函数.现在全局定位使用GA进行局部精确定位!

--- a/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
+++ b/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
@@ -20,8 +20,8 @@ gen.add("resample_interval", int_t, 0, "Number of filter updates required before
 
 gen.add("transform_tolerance", double_t, 0, "Time with which to post-date the transform that is published, to indicate that this transform is valid into the future.", .1, 0, 2)
 
-gen.add("recovery_alpha_slow", double_t, 0, "Exponential decay rate for the slow average weight filter, used in deciding when to recover by adding random poses. A good value might be 0.001.", 0, 0, .5)
-gen.add("recovery_alpha_fast", double_t, 0, "Exponential decay rate for the fast average weight filter, used in deciding when to recover by adding random poses. A good value might be 0.1.", 0, 0, 1)
+gen.add("recovery_alpha_slow", double_t, 0, "Exponential decay rate for the slow average weight filter, used in deciding when to recover by adding random poses. A good value might be 0.001.", 001, 0, .5)##mod by chq
+gen.add("recovery_alpha_fast", double_t, 0, "Exponential decay rate for the fast average weight filter, used in deciding when to recover by adding random poses. A good value might be 0.1.", 0.1, 0, 1)##mod by chq
 
 gen.add("do_beamskip", bool_t, 0, "When true skips laser scans when a scan doesnt work for a majority of particles", False)
 gen.add("beam_skip_distance", double_t, 0, "Distance from a valid map point before scan is considered invalid", 0.5, 0, 2)
@@ -71,5 +71,23 @@ gen.add("base_frame_id", str_t, 0, "Which frame to use for the robot base.", "ba
 gen.add("global_frame_id", str_t, 0, "The name of the coordinate frame published by the localization system.", "map")
 
 gen.add("restore_defaults", bool_t, 0, "Retsore the default configuration", False)
+
+#used for ga init loc
+# name type level description default min max
+ga = gen.add_group("ga")
+ga.add("pop_num", int_t, 0, "ga population num", 200, 1, 500)
+ga.add("generation", int_t, 0, "ga evolution genration time", 200, 10, 1000)
+ga.add("search_radius", double_t, 0, "ga search pos radius", 5, 1, 20)
+ga.add("angle_error_para", double_t, 0, "ga search angle par (par*(-pi,pi))", 0.5, 0, 1.0)
+#ga.add("x_encode_len", int_t, 0, "ga x encode len", 32, 1, 64)
+#ga.add("y_encode_len", int_t, 0, "ga y encode len", 32, 1, 64)
+#ga.add("angle_encode_len", int_t, 0, "ga angle encode len", 32, 1, 64)
+
+ga.add("covrate", double_t, 0, "ga alogrithm cross prob", 0.95, 0.05, 1.0)
+ga.add("mutrate", double_t, 0, "ga alogrithm mutation prob", 0.05, 0.0, 0.95)
+ga.add("outputting_precision", int_t, 0, "ga out putting result precision", 3, 0, 10)
+ga.add("select_method", str_t, 0, "ga search angle par (par*(-pi,pi))", "SUS")
+ga.add("cross_method", str_t, 0, "ga search angle par (par*(-pi,pi))", "P1XO")
+ga.add("mutation_method", str_t, 0, "ga search angle par (par*(-pi,pi))", "SPM")
 
 exit(gen.generate(PACKAGE, "amcl_optimize", "AMCL_OPTIMIZE"))
