--- a/imu_odom_combine/urdf/R2D2conf_base.yaml
+++ b/imu_odom_combine/urdf/R2D2conf_base.yaml
@@ -26,7 +26,7 @@ wheel_diff_controller:
   twist_covariance_diagonal: [0.1, 0.1, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
   # Top level frame (link) of the robot description
-  base_frame_id: base_link
+  base_frame_id: base_footprint
   odom_frame_id: odom      # default: odom
 # Velocity and acceleration limits for the robot
 # chq.we must set bigger than normal because we do not want the outside setting is bigger than this like in dwa setting
