--- a/imu_odom_combine/urdf/R2D2conf_base_kf.yaml
+++ b/imu_odom_combine/urdf/R2D2conf_base_kf.yaml
@@ -12,8 +12,8 @@ wheel_diff_controller:
   #须指定符号'，否则gazebo无法正确仿真
   left_wheel: 'left_front_wheel_joint'
   right_wheel: 'right_front_wheel_joint'
-  #if融合,disable pub tf,由ekf pub
-  enable_odom_tf: true
+  #融合的滑　不要pub tf,由ekf pub
+  enable_odom_tf: false
   # Odometry covariances for the encoder output of the robot. These values should
   # be tuned to your robot's sample odometry data, but these values are a good place
   # to start
@@ -26,19 +26,19 @@ wheel_diff_controller:
   twist_covariance_diagonal: [0.1, 0.1, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
   # Top level frame (link) of the robot description
-  base_frame_id: base_link
+  base_frame_id: base_footprint
   odom_frame_id: odom      # default: odom
 # Velocity and acceleration limits for the robot
 # chq.we must set bigger than normal because we do not want the outside setting is bigger than this like in dwa setting
 linear:
   x:
     has_velocity_limits    : true
-    max_velocity           : 2.0   # m/s
+    max_velocity           : 1.0   # m/s
     has_acceleration_limits: true
-    max_acceleration       : 4.0   # m/s^2
+    max_acceleration       : 2.0   # m/s^2
 angular:
   z:
     has_velocity_limits    : true
-    max_velocity           : 3.14   # rad/s
+    max_velocity           : 1.5   # rad/s
     has_acceleration_limits: true
-    max_acceleration       : 6.0   # rad/s^2
+    max_acceleration       : 2.5   # rad/s^2
