--- a/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
+++ b/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
@@ -38,7 +38,7 @@ gen.add("first_map_only", bool_t, 0, "When set to true, AMCL will only use the f
 gen.add("laser_min_range", double_t, 0, "Minimum scan range to be considered; -1.0 will cause the laser's reported minimum range to be used.", -1, -1, 1000)
 gen.add("laser_max_range", double_t, 0, "Maximum scan range to be considered; -1.0 will cause the laser's reported maximum range to be used.", -1, -1, 1000)
 
-gen.add("laser_max_beams", int_t, 0, "How many evenly-spaced beams in each scan to be used when updating the filter.", 720, 0, 720)
+gen.add("laser_max_beams", int_t, 0, "How many evenly-spaced beams in each scan to be used when updating the filter.", 720, 0, 7200)
 
 gen.add("laser_z_hit", double_t, 0, "Mixture weight for the z_hit part of the model.", .95, 0, 10)
 gen.add("laser_z_short", double_t, 0, "Mixture weight for the z_short part of the model.", .1, 0, 10)
@@ -71,6 +71,10 @@ gen.add("base_frame_id", str_t, 0, "Which frame to use for the robot base.", "ba
 gen.add("global_frame_id", str_t, 0, "The name of the coordinate frame published by the localization system.", "map")
 
 gen.add("restore_defaults", bool_t, 0, "Retsore the default configuration", False)
+
+#used for pf resampled
+gen.add("resampled_in_limit_area", bool_t, 0, "if true then resampled a rand pos nearby the bestpos", True)
+gen.add("resample_search_radius", double_t, 0, "the rand pos radius when resampled in limit area", 3.0, 0.0, 10.0)
 
 #used for ga init loc
 # name type level description default min max
