--- a/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
+++ b/navigation-indigo-devel/amcl_optimize/cfg/AMCL.cfg
@@ -78,6 +78,8 @@ gen.add("resample_search_radius", double_t, 0, "the rand pos radius when resampl
 
 #used for ga init loc
 # name type level description default min max
+gen.add("init_loc_method", str_t, 0, "init loc method rand_pf ga or default", "default")
+
 ga = gen.add_group("ga")
 ga.add("pop_num", int_t, 0, "ga population num", 200, 1, 500)
 ga.add("generation", int_t, 0, "ga evolution genration time", 200, 10, 1000)
